fixed overflow on kanban

--- a/src/Pages/Dashboard/SubRoutes/Project/Components/KanbanCard/KanbanCard.css
+++ b/src/Pages/Dashboard/SubRoutes/Project/Components/KanbanCard/KanbanCard.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   padding: 10px;
   min-height: 110px;
-  width: 250px;
+  min-width: 250px;
   border-radius: 10px;
   transition: box-shadow 0.1s ease-in-out;
 }
